despliegues/enrutado por version/auth-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtual-service
spec:
  hosts:
    - auth-service
  http:
  - match:
    - headers:
        version:
          exact: v2
    route:
      - destination:
          host: auth-service
          port:
            number: 5002
          subset: v2
  - route:
    - destination:
        host: auth-service
        port:
          number: 5002
        subset: v1
