despliegues/enrutado por version/message-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: message-virtual-service
spec:
  hosts:
    - message-service
  http:
  - match:
    - headers:
        version:
          exact: v2
    route:
      - destination:
          host: message-service
          port:
            number: 5000
          subset: v2
  - route:
    - destination:
        host: message-service
        port:
          number: 5000
        subset: v1
